@@ -1,3 +1,8 @@
+2003-10-09  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* win/tkWinButton.c (TkpDisplayButton): correct imageYOffset for
+	buttons with just images.
+
 2003-10-06  Joe English  <jenglish@users.sourceforge.net>
 	* library/text.tcl, doc/text.n:  Text widget binding for 
 	Control-v is now Mac-only, since it conflicts with standard 
